# exercise-1-chess-AyhamF2000

./: .gitignore
Chess/: CMakeLists.txt  README.md
Chess/include/: Board.h  Chess.h  ChessExceptions.h  Move.h  MoveEvaluator.h  Piece.h  PriorityQueue.h  ThreadPool.h
Chess/include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
Chess/src/: Board.cpp  CMakeLists.txt  Chess.cpp  Move.cpp  MoveEvaluator.cpp  PriorityQueue.cpp  ThreadPool.cpp  main.cpp
Chess/src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
